add lobster image

--- a/recipes/air-fryer-lobster.html
+++ b/recipes/air-fryer-lobster.html
@@ -1,1 +1,14 @@
-<h1>Air Fryer Lobster</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Air Fryer Lobster</title>
+    </head>
+
+    <body>
+        <h1>Air Fryer Lobster</h1>
+        <img src="../images/Air Fryer Lobster.webp" alt="Pic of a cooked lobster" height="310" width="310">
+        <h2>Air Fryer Lobster with Lemon-Garlic Butter</h2>
+        <p>An elegant meal for two using an just an air fryer. Succulent lobster with irresistable lemon garlic butter and parsley.</p> 
+    </body>
+</html>
