add lobster ingredients and steps

--- a/recipes/air-fryer-lobster.html
+++ b/recipes/air-fryer-lobster.html
@@ -9,6 +9,25 @@
         <h1>Air Fryer Lobster</h1>
         <img src="../images/Air Fryer Lobster.webp" alt="Pic of a cooked lobster" height="310" width="310">
         <h2>Air Fryer Lobster with Lemon-Garlic Butter</h2>
-        <p>An elegant meal for two using an just an air fryer. Succulent lobster with irresistable lemon garlic butter and parsley.</p> 
+        <p>An elegant meal for two using just an air fryer. In only 20 minutes you will have restaurant quality succulent lobsters. The irresistable lemon and garlic butter flavor will blow your mind!</p> 
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 (4 ounce) lobster tails</li>
+            <li>4 tablespoons butter</li>
+            <li>1 teaspoon lemon zest</li>
+            <li>1 clove garlic, grated</li>
+            <li>salt and ground black pepper to taste</li>
+            <li>1 teaspoon chopped fresh parsley</li>
+            <li>2 wedges lemon</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat an air fryer to 380 degrees F.</li>
+            <li>Butterfly lobster tails by cutting lengthwise through the centers of the hard top shells and meat with kitchen shears. Cut to, but not through, the bottoms of the shells. Spread the tail halves apart. Place tails in the air fryer basket with lobster meat facing up.</li>
+            <li>Melt butter in a small saucepan over medium heat. Add lemon zest and garlic. Heat until garlic is fragrant, about 30 seconds.</li>
+            <li>Transfer 2 tablespoons of butter mixture to a bowl. Brush this onto the lobster tails. Season lobster with salt and pepper.</li>
+            <li>Cook in the preheated air fryer until lobster meat is opaque, 5 to 7 minutes.</li>
+            <li>Spoon reserved butter from the saucepan over the lobster meat. Top with parsley and serve with lemon wedges.</li>
+        </ol>
     </body>
 </html>
