--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="recipes/air-fryer-lobster.html" rel="noopener noreferrer">Air Fryer Lobster</a>
+        <ul>
+            <li><a href="recipes/air-fryer-lobster.html" rel="noopener noreferrer">Air Fryer Lobster</a></li>
+        </ul>
     </body>
