add mussel recipe and pic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/air-fryer-lobster.html" rel="noopener noreferrer">Air Fryer Lobster</a></li>
+            <li><a href="recipes/air-fryer-lobster.html">Air Fryer Lobster</a></li>
+            <li><a href="recipes/drunken-mussels.html">Drunken Mussels</a></li>
         </ul>
     </body>
