add ingredients and steps

--- a/recipes/seafood-skillet-dip.html
+++ b/recipes/seafood-skillet-dip.html
@@ -11,5 +11,22 @@
         <img src="../images/Seafood-Skillet-Dip.webp" alt="Seafood skillet dip and grilled bread" height="310" width="310">
         <h2>Combination of seafood and cheesy dip</h2>
         <p>This addictive dip has fresh shrimp, lump crab and salmon. Baked in a skillet with seasoning along with cream cheese and Colby-Jack. Enjoy with chips, crackers or lightly toased bread.</p>
-        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 tablespoon olive oil</li>
+            <li>1/4 cup onion</li>
+            <li>6 ounces shrimp, peeled and deveined</li>
+            <li>1 teaspoon seafood seasoning such as Old Bay</li>
+            <li>8 ounces cream cheese, softened</li>
+            <li>2 tablespoons prepared horseradish</li>
+            <li>1 (4 ounce) can pink salmon, drained</li>
+            <li>3 cups shredded Colby-Jack cheese</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 350 degrees F. Heat a 10 inch cast iron skillet over medium heat.</li>
+            <li>Add olive oil, onion, shrimp and 1/2 teaspoon Old Bay seasoning to the skillet. Cook and stir until shrimp begin to turn pink, about 2 minutes per side. Remove skillet from heat. Once shrimp is cool enough to handle, chop and set aside.</li>
+            <li>Beat cream cheese in a bowl until smooth. Stir in hoeseradish, remaining 1/2 teaspoon Old Bay seasoning, 1 cup Colby-Jack cheese, chopped shrimp, cooked onions, salmon and crabmeat until will combined.</li>
+            <li>Transfer mixture back into skillet and spread evenly. Top with remaining 2 cups shredded cheese.</li>
+            <li>Bake in the preheated oven until edges are bubbling and cheese is melted and turning golden brown, about 15 minutes. Remove from the oven and let cool for 5 minutes. Serve warm, with slices of sourdough bread, crackers or tortilla chips</li>
     </body>
