add steps to seafood dip and add seafood link to index

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <ul>
             <li><a href="recipes/air-fryer-lobster.html">Air Fryer Lobster</a></li>
             <li><a href="recipes/drunken-mussels.html">Drunken Mussels</a></li>
+            <li><a href="recipes/seafood-skillet-dip.html">Seafood Skillet Dip</a></li>
         </ul>
     </body>
