--- a/recipes/seafood-skillet-dip.html
+++ b/recipes/seafood-skillet-dip.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Seafood Skillet Dip</h1>
         <img src="../images/Seafood-Skillet-Dip.webp" alt="Seafood skillet dip and grilled bread" height="310" width="310">
-        <h2>Combination of seafood and cheesy dip</h2>
+        <h2>Cheesy dip with seafood goodness</h2>
         <p>This addictive dip has fresh shrimp, lump crab and salmon. Baked in a skillet with seasoning along with cream cheese and Colby-Jack. Enjoy with chips, crackers or lightly toased bread.</p>
         <h3>Ingredients</h3>
         <ul>
@@ -28,5 +28,5 @@
             <li>Add olive oil, onion, shrimp and 1/2 teaspoon Old Bay seasoning to the skillet. Cook and stir until shrimp begin to turn pink, about 2 minutes per side. Remove skillet from heat. Once shrimp is cool enough to handle, chop and set aside.</li>
             <li>Beat cream cheese in a bowl until smooth. Stir in hoeseradish, remaining 1/2 teaspoon Old Bay seasoning, 1 cup Colby-Jack cheese, chopped shrimp, cooked onions, salmon and crabmeat until will combined.</li>
             <li>Transfer mixture back into skillet and spread evenly. Top with remaining 2 cups shredded cheese.</li>
-            <li>Bake in the preheated oven until edges are bubbling and cheese is melted and turning golden brown, about 15 minutes. Remove from the oven and let cool for 5 minutes. Serve warm, with slices of sourdough bread, crackers or tortilla chips</li>
+            <li>Bake in the preheated oven until edges are bubbling and cheese is melted and turning golden brown, about 15 minutes. Remove from the oven and let cool for 5 minutes. Serve warm, with slices of sourdough bread, crackers or tortilla chips.</li>
     </body>
