--- a/recipes/air-fryer-lobster.html
+++ b/recipes/air-fryer-lobster.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="utf-8">
         <title>Air Fryer Lobster</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Air Fryer Lobster</h1>
-        <img src="../images/Air Fryer Lobster.webp" alt="Pic of a cooked lobster" height="310" width="310">
+        <h1 class="one">Air Fryer Lobster</h1>
+        <img src="../images/Air-Fryer-Lobster.webp" alt="Pic of a cooked lobster" height="310" width="310">
         <h2>Air Fryer Lobster with Lemon-Garlic Butter</h2>
         <p>An elegant meal for two using just an air fryer. In only 20 minutes you will have restaurant quality succulent lobsters. The irresistable lemon and garlic butter flavor will blow your mind!</p> 
-        <h3>Ingredients</h3>
+        <h3 class="two" id="ing">Ingredients</h3>
         <ul>
             <li>2 (4 ounce) lobster tails</li>
             <li>4 tablespoons butter</li>
@@ -21,7 +22,7 @@
             <li>1 teaspoon chopped fresh parsley</li>
             <li>2 wedges lemon</li>
         </ul>
-        <h3>Steps</h3>
+        <h3 class="two">Steps</h3>
         <ol>
             <li>Preheat an air fryer to 380 degrees F.</li>
             <li>Butterfly lobster tails by cutting lengthwise through the centers of the hard top shells and meat with kitchen shears. Cut to, but not through, the bottoms of the shells. Spread the tail halves apart. Place tails in the air fryer basket with lobster meat facing up.</li>
