--- a/recipes/drunken-mussels.html
+++ b/recipes/drunken-mussels.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="utf-8">
         <title>Drunken Mussels</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Drunken Mussels</h1>
-        <img src="../images/Drunken Mussels.webp" alt="Pic of mussels" height="310" width="310">
+        <h1 class="one">Drunken Mussels</h1>
+        <img src="../images/Drunken-Mussels.webp" alt="Pic of mussels" height="310" width="310">
         <h2>Drunken Mussels</h2>
         <p>One of the fastest shellfish dishes. Amazing wine-based flavor that should be served with grilled bread to soak up every last drop of broth!</p>
-        <h3>Ingredients</h3>
+        <h3 class="two" id="ing">Ingredients</h3>
         <ul>
             <li>2 tablespoons butter</li>
             <li>4 cloves garlic, minced</li>
@@ -22,7 +23,7 @@
             <li>2 pounds mussels, cleaned and debearded</li>
             <li> 1 cup chopped fresh flat-leaf parsley</li>
         </ul>
-        <h3>Steps</h3>
+        <h3 class="two">Steps</h3>
         <ol>
             <li>Melt butter in a large stockpot over medium heat. Add garlic and let sizzle for about 30 seconds. Stir in lemon zest and red pepper flakes for about 45 seconds.</li>
             <li>Quickly pour wine into the pot and season with black pepper. Bring sauce to a boil. Add mussels and cover immediately. Shake pot and let boil for 1 minute.</li>
